--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<div>
-		<p>Ik Vaari</p>
+		<p>My current favourite song is [Ik Varri]</p>
 		<a>href="https://www.youtube.com/watch?v=o1Hyv9JGqd4&list=RDo1Hyv9JGqd4&start_radio=1"</a>
 	</div>
 	<!-- the entire body must be written by student -->
